--- a/package.json
+++ b/package.json
@@ -11,19 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.10",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.10",
     "@angular/compiler": "^17.3.10",
     "@angular/core": "^17.3.10",
     "@angular/forms": "^17.3.10",
     "@angular/localize": "^17.3.10",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.3.10",
     "@angular/platform-browser-dynamic": "^17.3.10",
     "@angular/router": "^17.3.10",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "rxjs": "~7.5.0",
